# Backtest-for-asset-allocation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/strategy_lab/: data.py  engine.py  metrics.py  report_builder.py
src/strategy_lab/app/: main.py
tests/: test_data.py  test_engine.py  test_integration.py  test_metrics.py
