[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strategy_lab"
version = "0.1.0"
description = "A backtesting framework for the Computational Investing course."
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "streamlit",
    "plotly",
    "reportlab",
    "yfinance",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
